src/main/webapp/css/post/postDetail.css
  section#post_detail {
        max-width: var(--max-width);
        padding: var(--side-padding);
        display: flex;
        flex-direction: column;
        align-items: center;
        font-size:15px;
      }
      .single-item {
         width: 700px;
        height: 500px;
        background: #a74949;
      }
      .single-item img {
        width: 700px;
        height: 500px;
        /* object-fit: cover; */
      }
      .slick-arrow {
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        z-index: 5;
      }
      .slick-prev {
        left: 0;
        background: url("../../img/left-arrow.png") no-repeat center center;
        background-size: contain;
        width: 30px;
        height: 30px;
        border: 0px solid #000;
        cursor: pointer;
      }
      .slick-next {
        right: 0;
        background: url("../../img/right-arrow.png") no-repeat center center;
        background-size: contain;
        width: 30px;
        height: 30px;
        border: 0px solid #000;
        cursor: pointer;
      }
      .slick-prev::before,
      .slick-next::before {
        content: "";
      }
      .post_top {
        margin-top: 100px;
        margin-bottom: 5px;
        width:700px;
        display: flex;
        justify-content: space-between;
      }
      .post_top .post_top_left {
        display: flex;
        align-items:center;
        height:40px;
      }
      .post_top .post_top_left img {
        width: 40px;
        height: 40px;
        border-radius: 50px;
        margin-right: 10px;
      }
      .post_top_left p:first-child {

      }
      .post_top .post_top_right {
        display: flex;
        align-items: center;
      }
      .post_top .post_top_right button {
        background: #000;
        color: #fff;
        border-radius: 5px;
        font-weight: 600;
        padding: 5px 10px;
        margin-right: 3px;
        font-size: 15px;
      }
      .post_top .post_top_right img {
        width: 30px;
        height: 30px;
      }
      .post_bottom {
        margin: 10px 0;
        width: 700px;
      }
      .post_bottom_top {
        display: flex;

        justify-content: space-between;
      }
      .post_bottom_top div {
        display: flex;
        align-items: center;
      }
      .post_bottom_top div img {
        margin-right: 5px
      }
      .comment_list {
        width: 700px;
        height: 200px;
        border-top: 2px solid #f0efef;
        overflow: scroll;
        scrollbar-width: 0px;
      }
      .comment_list::-webkit-scrollbar {
    display: none; /* 웹킷 브라우저에서 스크롤바 숨김 */
  }
      .comment {
        display: flex;
        justify-content: center;
        align-items:center;
        gap:20px;
        border-top: 2px solid #f0efef;
        border-bottom: 2px solid #f0efef;
        padding: 10px 20px;

      }
      .comment img {
        width: 40px;
        height: 40px;
      }
      .comment form {
        width: 100%;
      }
     .comment input {
             background-color: transparent;
            /* border: 2px solid #f0efef;*/
             caret-color: #222;
             color: transparent;
             border-radius: 20px;
             font-size: 14px;
             letter-spacing: -0.21px;
             /* line-height: 1.2142857143;/ */
             padding: 11px 52px 11px 12px;
             /* white-space: break-spaces; */
             width: 100%;
             word-break: break-all;
             color: #000;
           }

    .PostCategory {
          width: 700px;
   position: absolute;
        top: 146px;
        z-index: 10;

    }
    .PostCategory div {
      width: 100px;
      height: 30px;
      color:#fff;
      background: #000;
      display: flex;
      align-items: center;
      justify-content: center;
      border-radius: 0 0 10px 0;
    }
      .post_top .post_top_left div {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
                    height:40px;
                    padding: 3px 0;
          }

